# classifier

./: .dockerignore  .env.example  .gitignore  AGENTIC_LOOP_README.md  AGENT_ROLES.md  Agent-Init.md  Agent-Init.ps1  CHANGELOG.md  DEVELOPMENT_STANDARDS.md  Dockerfile  HANDOFF_SCHEMA.md  META_OPTIMIZER_SPEC.md  Makefile  PROJECT_CONTEXT.md  PROJECT_CONTEXT_TEMPLATE.md  PROMPT_COMPRESSION_GUIDE.md  README.md  SPRINTPLAN.md  SYSTEM_PROMPT.md  TASK_SPECIFICATION.md  TOOLS_INSTRUCTIONS.md  TOOLS_REGISTRY.md  docker-compose.yml  fix_script.py  fix_script2.py  pyproject.toml  setup_env_template.ps1
.agent/: LOOP_STATE.md  project_config.json
.agent/TRAJECTORIES/: example-T-EXAMPLE-001.json
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/api/v1/: admin.py  feedback.py  pd.py
app/core/: catalog.py  classifier.py  config.py  embeddings.py  models.py  pd_cleaner.py
app/db/: __init__.py  migrations.py  models.py  seeds.py  session.py
app/services/: __init__.py  catalog_service.py  classify_service.py  eval_service.py  pd_service.py  training_service.py
app/static/: ui.html
data/catalogs/: README.md  automotive.json  facilities.json  industrial.json  network.json  servers.json
docs/: ARCHITECTURE.md  CATALOG_DESIGN.md  DEPLOYMENT.md  USAGE.md
memory/: README.md  __init__.py  demo_meta.py  meta_harvester.py  questions_collector.py  test_meta_harvester.py
prompts/: orchestrator_start_prompt_m2.5.md  short_coder_prompt.md  short_debugger_prompt.md  short_orchestrator_prompt.md  short_orchestrator_prompt_m2.5.md  short_reviewer_prompt.md  short_tester_prompt.md
scripts/: docker-entrypoint.sh  docker-wrap.sh  seed.py  setup-docker-access.sh
tests/: conftest.py  test_admin_errors.py  test_api.py  test_catalog_service.py  test_classifier.py  test_cli.py  test_embeddings.py  test_eval.py  test_hybrid_scorer_integration.py  test_pd_cleaner.py  test_profiles.py  test_regression.py
tests/fixtures/: regression_dataset.jsonl
