[project]
name = "unhexx-classifier"
version = "0.2.0"
description = "Унифицированный сервис классификации типовых неисправностей. Полностью локальный, из коробки."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "unhexx", email = "dev@unhexx.example"}
]
keywords = ["classification", "faults", "malfunctions", "diagnostics", "справочник", "неисправности"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0,<3",
  "rapidfuzz>=3.9",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]
full = [
  "sentence-transformers>=3.0",  # Опционально, включается флагом ENABLE_EMBEDDINGS
]

[project.scripts]
unhexx-classifier = "app.cli:main"

[project.urls]
Homepage = "https://github.com/unhexx/classifier"
Repository = "https://github.com/unhexx/classifier"

[tool.setuptools]
# Используем app/ layout (см. план). Для чистоты в будущем можно перейти на src/
packages = ["app"]

[tool.setuptools.package-data]
"app" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
